--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "node test.js"
   },
   "author": "Viktoryia Stadub",
-  "dependencies": {
-    "babel": "^6.23.0"
-  },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "nodemon": "^1.12.1",
+    "csv-parse": "^1.2.3"
   }
 }
