--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "task3": "babel-node --presets es2015,stage-2 ./utils/streams.js"
   },
   "author": "Viktoryia Stadub",
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "commander": "^2.11.0",
+    "csv-parse": "^1.2.3",
+    "node-csv": "^0.1.2",
     "nodemon": "^1.12.1",
-    "csv-parse": "^1.2.3"
+    "through2": "^2.0.3",
+    "xml2js": "^0.4.19"
   }
 }
