--- a/config/config.json
+++ b/config/config.json
@@ -3,5 +3,6 @@
   "dataPath": "data",
   "dirWatcherEventName": "dirwatcher:changed",
   "fileName": "MOCK_DATA.csv",
-  "resultsFileName": "results.json"
+  "resultsFileName": "results.json",
+  "SECRET_WORD":"secret"
 }
