--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.16.2",
     "express-qs-parser": "0.0.1",
     "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3"
+    "cookie-parser": "^1.4.3",
+    "jsonwebtoken": "^8.1.0",
+    "passport": "^0.4.0"
   }
 }
