--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "jsonwebtoken": "^8.1.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "express-session": "^1.15.6",
+    "passport-local": "^1.0.0",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6"
   }
 }
